Set the Cloud Kernel repo priority. (#1965)
* Set the Cloud Kernel repo priority.

* Install the kernel from the cloud sig only.

* Must have a installation source.

* fix

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
@@ -3,10 +3,10 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os"
+url --url="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch/cloud-kernel"
+repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os" --excludepkgs="kernel,kernel-core"
 repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$basearch/os"
 repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$basearch/os"
-repo --name=CloudKernel --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch/cloud-kernel"
 poweroff
 
 # Network configuration
@@ -106,12 +106,13 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
 EOM
 # Rocky Linux Cloud Kernel repo.
 tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
-[cloud-sig]
+[cloud-kernel]
 name=Rocky Linux \$releasever - Cloud Kernel
 baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel
 enabled=1
 gpgcheck=1
 gpgkey=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+priority=-1
 EOM
 %end
 # Google Compute Engine kickstart config for Enterprise Linux 8.
@@ -129,7 +130,7 @@ userdel -r gce
 # Import all RPM GPG keys.
 curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-curl -o /etc/pki/rpm-gpg/RPM-GPG-KEY-Rocky-8-SIG-Cloud https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+curl -o /etc/pki/rpm-gpg/RPM-GPG-KEY-Rocky-SIG-Cloud https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 rpm --import /etc/pki/rpm-gpg/*
 
 # Configure the network for GCE.
