Fix sshd password auth.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp.cfg
@@ -173,7 +173,7 @@ rm -f /etc/boto.cfg /etc/udev/rules.d/70-persistent-net.rules
 rm -f /etc/sysconfig/network-scripts/ifcfg-ens4
 
 # Disable password authentication by default.
-sed -i -e '/^PasswordAuthentication /s/ yes$/ no/' /etc/ssh/sshd_config
+sed -i -e '/#PasswordAuthentication/s/.*/PasswordAuthentication no/' /etc/ssh/sshd_config
 
 # Set ServerAliveInterval and ClientAliveInterval to prevent SSH
 # disconnections. The pattern match is tuned to each source config file.
