Set 9.0 as the release version.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
@@ -102,6 +102,12 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 %end
+
+%post --log=/dev/ttyS0
+# Peg to RHEL 9.0
+echo "9.0" > /etc/dnf/vars/releasever
+%end
+
 %post --erroronfail
 set -x
 exec &> /dev/ttyS0
