--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
@@ -126,6 +126,8 @@ exec &> /dev/ttyS0
 
 # Configure SAP HANA packages.
 SAP_PKGS="
+chkconfig
+compat-openssl11
 fence-agents-gce
 libatomic
 libtool-ltdl
