Change EL kickstart configs to not set the hostname.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_8.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_8.cfg
@@ -9,7 +9,7 @@ repo --name=PowerTools --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$r
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to sdb since sda is the installer.
