--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_8.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_8.cfg
@@ -9,7 +9,7 @@ repo --name=PowerTools --mirrorlist="http://mirrorlist.centos.org/?release=$rele
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to sdb since sda is the installer.
