--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_arm64.cfg
@@ -7,7 +7,7 @@ harddrive --partition=nvme0n1p2 --dir=/
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to nvme0n2 since sda is the installer.
