--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp.cfg
@@ -10,7 +10,7 @@ repo --name=CRB --baseurl="https://dl.rockylinux.org/pub/rocky/9/CRB/$basearch/o
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to sdb since sda is the installer.
