--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_7.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_7.cfg
@@ -8,7 +8,7 @@ repo --name=updates --mirrorlist="http://mirrorlist.centos.org/?release=$release
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to sdb since sda is the installer.
