--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
@@ -9,7 +9,7 @@ repo --name=CRB --baseurl="http://mirror.stream.centos.org/9-stream/CRB/$basearc
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to sdb since sda is the installer.
