--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_arm64.cfg
@@ -10,7 +10,7 @@ repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerToo
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to sdb since sda is the installer.
