--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9.cfg
@@ -9,7 +9,7 @@ repo --name=CRB --baseurl="https://download.rockylinux.org/pub/rocky/9/CRB/x86_6
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to sdb since sda is the installer.
