--- a/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_9_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_9_arm64.cfg
@@ -9,7 +9,7 @@ repo --name=CRB --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$releasev
 poweroff
 
 # Network configuration
-network --bootproto=dhcp --hostname=localhost --device=link
+network --bootproto=dhcp --device=link
 
 ### Disk configuration.
 # The bootloader must be set to nvme0n2 since sda is the installer.
