Add Google Cloud SAP agent to RHEL for SAP builds.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_7_7_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_7_7_sap.cfg
@@ -89,8 +89,16 @@ gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-EOM
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+
+[google-cloud-sap]
+name=Google Cloud SAP
+baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el7-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
 [google-cloud-sdk]
 name=Google Cloud SDK
 baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el7-x86_64
@@ -121,6 +129,7 @@ SAP_PKGS="
 compat-sap-c++-5
 compat-sap-c++-6
 compat-sap-c++-7
+google-cloud-sap-agent
 libatomic
 libtool-ltdl
 lvm2
