--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap.cfg
@@ -90,8 +90,16 @@ gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-EOM
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+
+[google-cloud-sap]
+name=Google Cloud SAP
+baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el9-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
 [google-cloud-sdk]
 name=Google Cloud SDK
 baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
@@ -129,6 +137,7 @@ SAP_PKGS="
 chkconfig
 compat-openssl11
 fence-agents-gce
+google-cloud-sap-agent
 libatomic
 libtool-ltdl
 lvm2
