Don't use basearch or releasever variables.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_9.cfg
@@ -3,9 +3,9 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$releasever/baseos"
-repo --name=AppStream --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$releasever/appstream"
-repo --name=CRB --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$releasever/crb"
+url --mirrorlist="https://mirrors.almalinux.org/mirrorlist/9/baseos"
+repo --name=AppStream --mirrorlist="https://mirrors.almalinux.org/mirrorlist/9/appstream"
+repo --name=CRB --mirrorlist="https://mirrors.almalinux.org/mirrorlist/9/crb"
 poweroff
 
 # Network configuration
