--- a/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_9_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/almalinux_9_arm64.cfg
@@ -3,9 +3,9 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$releasever/baseos"
-repo --name=AppStream --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$releasever/appstream"
-repo --name=CRB --mirrorlist="https://mirrors.almalinux.org/mirrorlist/$releasever/crb"
+url --mirrorlist="https://mirrors.almalinux.org/mirrorlist/9/baseos"
+repo --name=AppStream --mirrorlist="https://mirrors.almalinux.org/mirrorlist/9/appstream"
+repo --name=CRB --mirrorlist="https://mirrors.almalinux.org/mirrorlist/9/crb"
 poweroff
 
 # Network configuration
@@ -86,7 +86,7 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-\$basearch-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -96,7 +96,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-\$basearch
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
