--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_8.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_8.cfg
@@ -3,9 +3,9 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --mirrorlist="http://mirrorlist.centos.org/?release=8-stream&arch=$basearch&repo=BaseOS"
-repo --name=AppStream --mirrorlist="http://mirrorlist.centos.org/?release=8-stream&arch=$basearch&repo=AppStream"
-repo --name=PowerTools --mirrorlist="http://mirrorlist.centos.org/?release=8-stream&arch=$basearch&repo=PowerTools"
+url --mirrorlist="http://mirrorlist.centos.org/?release=8-stream&arch=x86_64&repo=BaseOS"
+repo --name=AppStream --mirrorlist="http://mirrorlist.centos.org/?release=8-stream&arch=x86_64&repo=AppStream"
+repo --name=PowerTools --mirrorlist="http://mirrorlist.centos.org/?release=8-stream&arch=x86_64&repo=PowerTools"
 poweroff
 
 # Network configuration
