--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
@@ -3,9 +3,9 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="http://mirror.stream.centos.org/9-stream/BaseOS/$basearch/os"
-repo --name=AppStream --baseurl="http://mirror.stream.centos.org/9-stream/AppStream/$basearch/os"
-repo --name=CRB --baseurl="http://mirror.stream.centos.org/9-stream/CRB/$basearch/os"
+url --url="http://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os"
+repo --name=AppStream --baseurl="http://mirror.stream.centos.org/9-stream/AppStream/x86_64/os"
+repo --name=CRB --baseurl="http://mirror.stream.centos.org/9-stream/CRB/x86_64/os"
 poweroff
 
 # Network configuration
