--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9.cfg
@@ -86,7 +86,7 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-\$basearch-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -96,7 +96,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-\$basearch
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
