--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp.cfg
@@ -3,10 +3,10 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://dl.rockylinux.org/pub/sig/9/cloud/$basearch/cloud-kernel"
-repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/9/BaseOS/$basearch/os" --excludepkgs="kernel,kernel-core"
-repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/9/AppStream/$basearch/os"
-repo --name=CRB --baseurl="https://dl.rockylinux.org/pub/rocky/9/CRB/$basearch/os"
+url --url="https://dl.rockylinux.org/pub/sig/9/cloud/x86_64/cloud-kernel"
+repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/9/BaseOS/x86_64/os" --excludepkgs="kernel,kernel-core"
+repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/9/AppStream/x86_64/os"
+repo --name=CRB --baseurl="https://dl.rockylinux.org/pub/rocky/9/CRB/x86_64/os"
 poweroff
 
 # Network configuration
@@ -87,7 +87,7 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-\$basearch-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -97,7 +97,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-\$basearch
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -107,11 +107,11 @@ EOM
 # Rocky Linux Cloud Kernel repo.
 tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
 [cloud-kernel]
-name=Rocky Linux \$releasever - Cloud Kernel
-baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel
+name=Rocky Linux 9 - Cloud Kernel
+baseurl=https://dl.rockylinux.org/pub/sig/9/cloud/x86_64/cloud-kernel
 enabled=1
 gpgcheck=1
-gpgkey=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+gpgkey=https://dl.rockylinux.org/pub/sig/9/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 priority=-1
 EOM
 %end
