--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_arm64.cfg
@@ -3,10 +3,10 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch/cloud-kernel"
-repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os" --excludepkgs="kernel, kernel-core"
-repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$basearch/os"
-repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$basearch/os"
+url --url="https://dl.rockylinux.org/pub/sig/8/cloud/aarch64/cloud-kernel"
+repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/8/BaseOS/aarch64/os" --excludepkgs="kernel, kernel-core"
+repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/aarch64/os"
+repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/aarch64/os"
 poweroff
 
 # Network configuration
@@ -87,7 +87,7 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el8-\$basearch-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el8-aarch64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -97,7 +97,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-\$basearch
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-aarch64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -107,11 +107,11 @@ EOM
 # Rocky Linux Cloud Kernel repo.
 tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
 [cloud-kernel]
-name=Rocky Linux \$releasever - Cloud Kernel
-baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel
+name=Rocky Linux 8 - Cloud Kernel
+baseurl=https://dl.rockylinux.org/pub/sig/8/cloud/aarch64/cloud-kernel
 enabled=1
 gpgcheck=1
-gpgkey=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+gpgkey=https://dl.rockylinux.org/pub/sig/8/cloud/aarch64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 priority=-1
 EOM
 %end
