Add SIG Cloud Kernel source repo config.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_arm64.cfg
@@ -104,12 +104,22 @@ repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
+
 # Rocky Linux Cloud Kernel repo.
 tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
 [cloud-kernel]
 name=Rocky Linux 9 - Cloud Kernel
 baseurl=https://dl.rockylinux.org/pub/sig/9/cloud/aarch64/cloud-kernel
 enabled=1
+gpgcheck=1
+gpgkey=https://dl.rockylinux.org/pub/sig/9/cloud/aarch64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+priority=-1
+EOM
+tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
+[cloud-kernel-source]
+name=Rocky Linux 9 - Cloud Kernel Source
+baseurl=https://dl.rockylinux.org/pub/sig/9/cloud/source/cloud-kernel
+enabled=0
 gpgcheck=1
 gpgkey=https://dl.rockylinux.org/pub/sig/9/cloud/aarch64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 priority=-1
