--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_1_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_1_sap.cfg
@@ -10,12 +10,12 @@ poweroff
 network --bootproto=dhcp --device=link
 
 ### Disk configuration.
-# The bootloader must be set to sdb since sda is the installer.
-bootloader --boot-drive=sdb --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
+# build_installer.py should replace with the id of the install disk referenced by id to avoid race conditions
+bootloader --boot-drive=/dev/disk/by-id/sub-install-disk-id --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
 # EFI partitioning, creates a GPT partitioned disk.
-clearpart --drives=sdb --all
-part /boot/efi --size=200 --fstype=efi --ondrive=sdb
-part / --size=100 --grow --ondrive=sdb --label=root --fstype=xfs
+clearpart --drives=/dev/disk/by-id/sub-install-disk-id --all
+part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/sub-install-disk-id
+part / --size=100 --grow --ondrive=/dev/disk/by-id/sub-install-disk-id --label=root --fstype=xfs
 
 ### Installed system configuration.
 firewall --enabled
