--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
@@ -11,14 +11,6 @@ poweroff
 # Network configuration
 network --bootproto=dhcp --device=link
 
-### Disk configuration.
-# The bootloader must be set to sdb since sda is the installer.
-bootloader --boot-drive=sdb --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
-# EFI partitioning, creates a GPT partitioned disk.
-clearpart --drives=sdb --all
-part /boot/efi --size=200 --fstype=efi --ondrive=sdb
-part / --size=100 --grow --ondrive=sdb --label=root --fstype=xfs
-
 ### Installed system configuration.
 firewall --enabled
 services --enabled=sshd,rngd --disabled=sshd-keygen@
@@ -27,6 +19,27 @@ timezone --utc UTC --ntpservers=metadata.google.internal
 rootpw --iscrypted --lock *
 firstboot --disabled
 user --name=gce --lock
+
+### Disk configuration.
+# Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
+%pre --interpreter=/usr/bin/bash
+cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
+cp /run/install/isodir/google_nvme_id /usr/lib/udev/
+chmod +x /usr/lib/udev/google_nvme_id
+# Wait for coldplug events from boot to settle, or we won't generate new events for the reload/trigger
+udevadm settle
+udevadm control --reload
+udevadm trigger --settle
+tee -a /tmp/disk-config << EOM
+# build_installer.py will replace with the id of the install disk to avoid race conditions
+bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
+# EFI partitioning, creates a GPT partitioned disk.
+clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
+part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
+part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs
+EOM
+%end
+%include /tmp/disk-config
 
 # packages.cfg
 # Contains a list of packages to be installed, or not, on all flavors.
