RHEL for SAP BYOS and RHEL 9 BYOS arm64. (#2236)
* RHEL for SAP BYOS, RHEL 9 BYOS arm64.

* fixes

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_0_sap_byos.cfg
@@ -97,18 +97,25 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-EOM
 
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-cloud-sap]
+name=Google Cloud SAP
+baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el9-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -116,21 +123,58 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 %end
+
+%post --log=/dev/ttyS0
+# Peg to RHEL 9.0
+echo "9.0" > /etc/dnf/vars/releasever
+%end
+
 %post --erroronfail
 set -x
-exec &> /dev/ttyAMA0
-dnf -y install google-rhui-client-rhel9
+exec &> /dev/ttyS0
+dnf -y install google-rhui-client-rhel9-sap
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 9.
 %onerror
-echo "Build Failed!" > /dev/ttyAMA0
+echo "Build Failed!" > /dev/ttyS0
 shutdown -h now
 %end
 
 %post --erroronfail
 set -x
-exec &> /dev/ttyAMA0
+exec &> /dev/ttyS0
+
+# Configure SAP HANA packages.
+SAP_PKGS="
+chkconfig
+compat-openssl11
+fence-agents-gce
+google-cloud-sap-agent
+libatomic
+libtool-ltdl
+lvm2
+numactl
+numactl-libs
+nfs-utils
+pacemaker
+pcs
+resource-agents
+resource-agents-gcp
+resource-agents-sap
+resource-agents-sap-hana
+rhel-system-roles-sap
+tuned-profiles-sap
+tuned-profiles-sap-hana
+"
+
+dnf install -y ${SAP_PKGS}
+%end
+
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+
 # Delete the dummy user account.
 userdel -r gce
 
@@ -161,7 +205,7 @@ EOL
 
 # Install GCE guest packages.
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
+rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-sdk
@@ -226,8 +270,17 @@ dracut -f --kver="${kver}"
 restorecon /etc/resolv.conf
 %end
 
+# RHEL BYOS
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+dnf -y install subscription-manager
+dnf -y remove google-rhui-client-*
+%end
+
 # Cleanup.
-%post --nochroot --log=/dev/ttyAMA0
+%post --nochroot --log=/dev/ttyS0
 set -x
 rm -Rf /mnt/sysimage/tmp/*
 %end
+
