--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos_arm64.cfg
@@ -226,6 +226,14 @@ dracut -f --kver="${kver}"
 restorecon /etc/resolv.conf
 %end
 
+# RHEL BYOS
+%post --erroronfail
+set -x
+exec &> /dev/ttyAMA0
+dnf -y install subscription-manager
+dnf -y remove google-rhui-client-*
+%end
+
 # Cleanup.
 %post --nochroot --log=/dev/ttyAMA0
 set -x
