--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_4_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_4_sap_byos.cfg
@@ -1,4 +1,4 @@
-# rhel-9-options.cfg
+# rhel8-options.cfg
 
 ### Anaconda installer configuration.
 # Install in text mode.
@@ -97,18 +97,25 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el8-x86_64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-EOM
 
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-cloud-sap]
+name=Google Cloud SAP
+baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el8-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -116,28 +123,62 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 %end
-%post --erroronfail
-set -x
-exec &> /dev/ttyAMA0
-dnf -y install google-rhui-client-rhel9
+%post --log=/dev/ttyS0
+# Peg to RHEL 8.4
+echo "8.4" > /etc/dnf/vars/releasever
 %end
 
-# Google Compute Engine kickstart config for Enterprise Linux 9.
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+dnf -y install google-rhui-client-rhel8-sap
+%end
+
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+
+# Configure SAP HANA packages.
+SAP_PKGS="
+compat-sap-c++-9
+fence-agents-gce
+google-cloud-sap-agent
+libatomic
+libtool-ltdl
+lvm2
+numactl
+numactl-libs
+nfs-utils
+pacemaker
+pcs
+resource-agents
+resource-agents-gcp
+resource-agents-sap
+resource-agents-sap-hana
+rhel-system-roles-sap
+tuned-profiles-sap
+tuned-profiles-sap-hana
+"
+
+dnf install -y ${SAP_PKGS}
+%end
+
+# Google Compute Engine kickstart config for Enterprise Linux 8.
 %onerror
-echo "Build Failed!" > /dev/ttyAMA0
+echo "Build Failed!" > /dev/ttyS0
 shutdown -h now
 %end
 
 %post --erroronfail
 set -x
-exec &> /dev/ttyAMA0
+exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
 
 # Import all RPM GPG keys.
 curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-rpm --import /etc/pki/rpm-gpg/google*
+rpm --import /etc/pki/rpm-gpg/*
 
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
@@ -152,7 +193,7 @@ EOL
 # Disable IPv6 for DNF.
 echo "ip_resolve=4" >> /etc/dnf/dnf.conf
 
-# Set google-compute-engine config for EL9.
+# Set google-compute-engine config for EL8.
 cat >>/etc/default/instance_configs.cfg.distro << EOL
 # Disable boto plugin setup.
 [InstanceSetup]
@@ -161,11 +202,9 @@ EOL
 
 # Install GCE guest packages.
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
 
 # Install the Cloud SDK package.
-dnf install -y google-cloud-sdk
-rpm -q google-cloud-sdk
+dnf install -y google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
@@ -178,29 +217,25 @@ rm -f /etc/boto.cfg /etc/udev/rules.d/70-persistent-net.rules
 rm -f /etc/sysconfig/network-scripts/ifcfg-ens4
 
 # Disable password authentication by default.
-sed -i'' -e '/PasswordAuthentication yes/s/^.*/PasswordAuthentication no/' /etc/ssh/sshd_config
+sed -i -e '/^PasswordAuthentication /s/ yes$/ no/' /etc/ssh/sshd_config
 
 # Set ServerAliveInterval and ClientAliveInterval to prevent SSH
 # disconnections. The pattern match is tuned to each source config file.
 # The $'...' quoting syntax tells the shell to expand escape characters.
-sed -i'' -e $'/^\tServerAliveInterval/d' /etc/ssh/ssh_config
-sed -i'' -e $'/^Host \\*$/a \\\tServerAliveInterval 420' /etc/ssh/ssh_config
-sed -i'' -e '/ClientAliveInterval/s/^.*/ClientAliveInterval 420/' /etc/ssh/sshd_config
+sed -i -e $'/^\tServerAliveInterval/d' /etc/ssh/ssh_config
+sed -i -e $'/^Host \\*$/a \\\tServerAliveInterval 420' /etc/ssh/ssh_config
+sed -i -e '/ClientAliveInterval/s/^.*/ClientAliveInterval 420/' /etc/ssh/sshd_config
 
 # Disable root login via SSH by default.
-sed -i'' -e '/PermitRootLogin prohibit-password/s/^.*/PermitRootLogin no/' /etc/ssh/sshd_config
+sed -i -e '/PermitRootLogin yes/s/^.*/PermitRootLogin no/' /etc/ssh/sshd_config
 
 # Update all packages.
 dnf -y update
 
-# If package update above involved a kernel package, it might not have properly set kernel command line
-# options, instead pulling from /proc/cmdline on the installer VM. Recreate boot loader options here.
-grub2-mkconfig
-
 # Make changes to dnf automatic.conf
 # Apply updates for security (RHEL) by default. NOTE this will not work in CentOS.
-sed -i'' 's/upgrade_type =.*/upgrade_type = security/' /etc/dnf/automatic.conf
-sed -i'' 's/apply_updates =.*/apply_updates = yes/' /etc/dnf/automatic.conf
+sed -i 's/upgrade_type =.*/upgrade_type = security/' /etc/dnf/automatic.conf
+sed -i 's/apply_updates =.*/apply_updates = yes/' /etc/dnf/automatic.conf
 # Enable the DNF automatic timer service.
 systemctl enable dnf-automatic.timer
 
@@ -226,8 +261,17 @@ dracut -f --kver="${kver}"
 restorecon /etc/resolv.conf
 %end
 
+# RHEL BYOS
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+dnf -y install subscription-manager
+dnf -y remove google-rhui-client-*
+%end
+
 # Cleanup.
-%post --nochroot --log=/dev/ttyAMA0
+%post --nochroot --log=/dev/ttyS0
 set -x
 rm -Rf /mnt/sysimage/tmp/*
 %end
+
