google-cloud-sdk -> google-cloud-cli in EL images

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_7_7_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_7_7_sap.cfg
@@ -209,8 +209,8 @@ echo "ip_resolve=4" >> /etc/yum.conf
 
 # Install GCE guest packages and CloudSDK.
 yum install -y google-compute-engine google-osconfig-agent gce-disk-expand
-yum install -y google-cloud-sdk
-rpm -q google-cloud-sdk google-compute-engine google-osconfig-agent gce-disk-expand
+yum install -y google-cloud-cli
+rpm -q google-cloud-cli google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
