--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9.cfg
@@ -163,8 +163,8 @@ dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
-dnf install -y google-cloud-sdk
-rpm -q google-cloud-sdk
+dnf install -y google-cloud-cli
+rpm -q google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
