--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_arm64.cfg
@@ -158,7 +158,7 @@ dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
 
 # Install the Cloud SDK package.
-dnf install -y google-cloud-sdk
+dnf install -y google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
