--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8.cfg
@@ -162,7 +162,7 @@ EOL
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
-dnf install -y google-cloud-sdk
+dnf install -y google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
