--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos.cfg
@@ -117,7 +117,7 @@ EOM
 %post --erroronfail
 set -x
 exec &> /dev/ttyS0
-dnf config-manager --set-disabled google-cloud-sdk
+dnf config-manager --set-disabled google-cloud-cli
 dnf -y install google-rhui-client-rhel9
 %end
 
@@ -164,9 +164,9 @@ rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
 # Re-enable the cloud SDK repo
-dnf config-manager --set-enabled google-cloud-sdk
-dnf install -y google-cloud-sdk
-rpm -q google-cloud-sdk
+dnf config-manager --set-enabled google-cloud-cli
+dnf install -y google-cloud-cli
+rpm -q google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
