RHEL 8.10 builds and IDPF enablement for RHEL 8/8.10. (#2322)
* RHEL 8.10 builds and IDPF enablement for RHEL 8/8.10.

* Fix for RHEL 8.10 changes.

* fix

* Fix.

* fix

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_10_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_10_sap_byos.cfg
@@ -30,7 +30,7 @@ udevadm control --reload
 udevadm trigger --settle
 tee -a /tmp/disk-config << EOM
 # build_installer.py will replace with the id of the install disk to avoid race conditions
-bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
+bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
 part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
@@ -55,9 +55,6 @@ python3
 rng-tools
 tar
 vim
--subscription-manager
--rhc
--insights-client
 -alsa-utils
 -b43-fwcutter
 -dmraid
@@ -105,8 +102,16 @@ gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-EOM
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+
+[google-cloud-sap]
+name=Google Cloud SAP
+baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el8-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
 [google-cloud-sdk]
 name=Google Cloud SDK
 baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-x86_64
@@ -117,10 +122,40 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 %end
+
 %post --erroronfail
 set -x
 exec &> /dev/ttyS0
-dnf -y install google-rhui-client-rhel8
+dnf -y install google-rhui-client-rhel810-sap
+%end
+
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+
+# Configure SAP HANA packages.
+SAP_PKGS="
+compat-sap-c++-9
+fence-agents-gce
+google-cloud-sap-agent
+libatomic
+libtool-ltdl
+lvm2
+numactl
+numactl-libs
+nfs-utils
+pacemaker
+pcs
+resource-agents
+resource-agents-gcp
+resource-agents-sap
+resource-agents-sap-hana
+rhel-system-roles-sap
+tuned-profiles-sap
+tuned-profiles-sap-hana
+"
+
+dnf install -y ${SAP_PKGS}
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 8.
