Update Optimized Rocky to be sure to use cloud-kernel  (#2344)
* Update Optimized Rocky to be sure to use cloud-kernel and never the kernel from BaseOS

* fix the rocky9 repo baseos file to edit

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_arm64.cfg
@@ -137,6 +137,8 @@ gpgcheck=1
 gpgkey=https://dl.rockylinux.org/pub/sig/9/cloud/aarch64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 priority=-1
 EOM
+# Be sure we don't get kernels from the BaseOS repo
+sed -i '/\[baseos\]/a exclude=kernel*' /etc/yum.repos.d/rocky.repo
 %end
 # Google Compute Engine kickstart config for Enterprise Linux 9.
 %onerror
