Add CIQ repos for Nvidia and Mlx drivers

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
@@ -184,7 +184,27 @@ dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 dnf install -y google-cloud-cli
 
 # Install Accelerator components: nvidia and mellanox drivers
-# TODO: Add the repos and install the packages here when they are ready
+tee -a /etc/yum.repos.d/Rocky-OpenGPU.repo << EOM
+[open-gpu-kernel-modules-el8-x86_64]
+name = Open gpu kernel modules (x86_64)
+baseurl = https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el8-x86_64
+metadata_expire = 5
+priority = 50
+repo_gpgcheck = false
+gpgcheck = false
+enabled = true
+skip_if_unavailable = true
+EOM
+tee -a /etc/yum.repos.d/Rocky-Mlx.repo << EOM
+[nvidia-mellanox-ofed-driver-el8-x86_64]
+name = Nvidia Mellanox OFED Drivers
+baseurl = https://depot.ciq.com/public/files/gce-accelerator/nvidia-mellanox-ofed-driver-el8-x86_64
+metadata_expire = 5
+priority = 50
+repo_gpgcheck = false
+gpgcheck = false
+enabled = true
+skip_if_unavailable = true
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
