Add dnf install commands to repos added in previous commit

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
@@ -206,6 +206,9 @@ gpgcheck = false
 enabled = true
 skip_if_unavailable = true
 
+dnf install -y open-gpu-kernel-modules-el8-x86_64
+dnf install -y nvidia-mellanox-ofed-driver-el8-x86_64
+
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
 
