Add cuda repos for kickstart configs

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
@@ -206,6 +206,7 @@ enabled = true
 skip_if_unavailable = true
 EOM
 
+dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/x86_64/cuda-rhel9.repo
 dnf install -y open-gpu-kernel-modules-el9-x86_64
 dnf install -y nvidia-mellanox-ofed-driver-el9-x86_64
 
