--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
@@ -206,6 +206,7 @@ gpgcheck = false
 enabled = true
 skip_if_unavailable = true
 
+dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
 dnf install -y open-gpu-kernel-modules-el8-x86_64
 dnf install -y nvidia-mellanox-ofed-driver-el8-x86_64
 
