Fix missing EOM

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
@@ -205,6 +205,7 @@ repo_gpgcheck = false
 gpgcheck = false
 enabled = true
 skip_if_unavailable = true
+EOM
 
 dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
 dnf install -y open-gpu-kernel-modules-el8-x86_64
